[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://vr_offices/ui/WorkspaceOverlay.gd" id="1"]

[node name="WorkspaceOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="CreatePopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 0.0
offset_top = 0.0
offset_right = 360.0
offset_bottom = 160.0

[node name="Panel" type="Panel" parent="%CreatePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="%CreatePopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="Title" type="Label" parent="%CreatePopup/Panel/VBox"]
layout_mode = 2
text = "Create workspace"

[node name="NameEdit" type="LineEdit" parent="%CreatePopup/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Workspace name"

[node name="Buttons" type="HBoxContainer" parent="%CreatePopup/Panel/VBox"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="%CreatePopup/Panel/VBox/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Cancel"

[node name="OkButton" type="Button" parent="%CreatePopup/Panel/VBox/Buttons"]
layout_mode = 2
focus_mode = 0
text = "Create"

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(220, 90)

[node name="Toast" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 12.0
offset_top = 12.0
offset_right = 520.0
offset_bottom = 42.0
text = ""
